# aviaozinhoachievements

./: .gitignore  CMakeLists.txt
Misc/qssm_pak/particles/: qssm.cfg  qssm_slime.cfg  qssmc.cfg
Quake/: GNSInterface.cpp  GNSInterface.h  NetPipe.c  NetPipe.h  SignalingClient.cpp  SignalingClient.hpp  SteamProtocol.h  cfgfile.c  cl_input.c  cl_main.c  cl_parse.c  client.h  common.c  common.h  common_capi.h  console.c  draw.h  font.c  font.h  gl_draw.c  gl_screen.c  gl_vidsdl.c  host.c  host_cmd.c  image.c  in_sdl.c  json.c  keys.c  keys.h  main_sdl.c  menu.c  menu.h  net.h  net_dgrm.c  net_gns.c  net_gns.h  net_main.c  net_win.c  net_wins.c  pipe.c  (+11 more)
Windows/: QuakeSpasm.aps
Windows/SDL2TTF/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  SDL2_ttf-Release.pc  SDL2_ttf.sln  SDL2_ttf.vcxproj  SDL2_ttf.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  glfont.vcxproj  glfont.vcxproj.filters  showfont.vcxproj  showfont.vcxproj.filters
Windows/libdatachannel/test/: CMakeCache.txt  LibDataChannelConfigVersion.cmake
binold/Windows/libdatachannel/MinSizeRel/: datachannel.exp  datachannel.lib
binold/Windows/libdatachannel/datachannel.dir/MinSizeRel/: datachannel.dll.recipe
binold/Windows/libdatachannel/datachannel.dir/MinSizeRel/datachannel.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
binold/x64/MinSizeRel/ALL_BUILD/: ALL_BUILD.recipe
binold/x64/MinSizeRel/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
